[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player_schild_code/Player_schild.gd" type="Script" id=1]
[ext_resource path="res://Player_schild_code/Arm_player_schild.gd" type="Script" id=2]
[ext_resource path="res://art/Player_Schild_art/Mummy_idle v2.png" type="Texture" id=3]
[ext_resource path="res://art/Player_Schild_art/Mummy_walk v2.png" type="Texture" id=4]
[ext_resource path="res://art/Player_Schild_art/Mummy arm with skjold.png" type="Texture" id=5]
[ext_resource path="res://Player_schild_code/Idle_player_schild.gd" type="Script" id=6]
[ext_resource path="res://Player_schild_code/Walk_player_schild.gd" type="Script" id=7]
[ext_resource path="res://art/Player_Schild_art/Mummy_death v2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 74.75 )

[sub_resource type="Animation" id=5]
resource_name = "Death_player_schild"
tracks/0/type = "value"
tracks/0/path = NodePath("Death_player_schild:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_player_schild"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle_player_schild:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_player_schild"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk_player_schild:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.22221
height = 8.0

[node name="Player_schild" type="KinematicBody2D"]
position = Vector2( 680, 640 )
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 56, 50.75 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death_player_schild = SubResource( 5 )
anims/Idle_player_schild = SubResource( 2 )
anims/Walk_player_schild = SubResource( 3 )

[node name="Idle_player_schild" type="Sprite" parent="."]
position = Vector2( 56, 40 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
hframes = 4
region_enabled = true
region_rect = Rect2( 11, 15, 192, 33 )
script = ExtResource( 6 )

[node name="Walk_player_schild" type="Sprite" parent="."]
visible = false
position = Vector2( 56, 40 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
hframes = 6
region_enabled = true
region_rect = Rect2( 10, 13, 288, 35 )
script = ExtResource( 7 )

[node name="Death_player_schild" type="Sprite" parent="."]
visible = false
position = Vector2( 56, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
hframes = 6
region_enabled = true
region_rect = Rect2( 10, 0, 290, 49 )

[node name="Arm_schild" type="Sprite" parent="."]
position = Vector2( 72, 8 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 5 )
offset = Vector2( -4, 7 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Arm_schild"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm_schild/Area2D"]
position = Vector2( -5.77779, 8.44444 )
rotation = -0.436332
shape = SubResource( 6 )
